--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Exercise-2021-06-23/.pytest_cache/
 Exercise-2021-06-23/draft
 Exercise-2021-06-23/htmlcov/
 Exercise-2021-06-23/.coverage
+day_5/draft
+day_5/__pycache__/
