Add: Django Project and App Initialized

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ Exercise-2021-06-23/htmlcov/
 Exercise-2021-06-23/.coverage
 day_5/draft
 day_5/__pycache__/
+day-7/ADF/ADF/.env
+day-7/ADF/ADF/__pycache__/
+day-7/ADF/FirstAPP/__pycache__/
+day-7/ADF/FirstAPP/migrations/__pycache__/
