django test done with coverage of 91% now

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ day-7/ADF/ADF/.env
 day-7/ADF/ADF/__pycache__/
 day-7/ADF/FirstAPP/__pycache__/
 day-7/ADF/FirstAPP/migrations/__pycache__/
+day-7/ADF/htmlcov/
